# genai-coldstart-guard

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
app/: config.py  databricks_client.py  main.py  mock_backend.py  models.py  responses.py
docs/: cold-start-experiments.md  databricks-apps-vs-model-serving.md  databricks-endpoint-states.md  databricks-latency-axes.md  databricks-performance-monitoring.md  databricks-storage-analytical-vs-transactional.md  endpoint-lifecycle.mmd
docs/adr/: ADR-0001-cold-start-facade-poc.md  README.md
docs/research/: databricks-cold-start-facade-research.md
scripts/: curl_examples.sh  get_databricks_token.sh
tests/: test_classify_state.py  test_mock_routes.py
