[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-coldstart-guard"
version = "1.0.1"
description = "Cold-start aware FastAPI facade/mock for cost-aware Databricks GenAI serving"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
# Target runtime is Python 3.9. This makes ruff flag any 3.10+ syntax (match/case, `X | Y`
# unions in annotations, etc.) so it cannot slip into code that must run on 3.9.
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
